; ModuleID = '/home/carl/AnghaBench/Cinder/src/oggvorbis/vorbis/extr_vorbisenc.c_vorbis_encode_init.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/oggvorbis/vorbis/extr_vorbisenc.c_vorbis_encode_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vorbis_encode_init(i32* %0, i64 %1, i64 %2, i64 %3, i64 %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i64 %1, i64* %9, align 8
  store i64 %2, i64* %10, align 8
  store i64 %3, i64* %11, align 8
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load i64, i64* %11, align 8
  %19 = load i64, i64* %12, align 8
  %20 = load i64, i64* %13, align 8
  %21 = call i32 @vorbis_encode_setup_managed(i32* %15, i64 %16, i64 %17, i64 %18, i64 %19, i64 %20)
  store i32 %21, i32* %14, align 4
  %22 = load i32, i32* %14, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %6
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @vorbis_info_clear(i32* %25)
  %27 = load i32, i32* %14, align 4
  store i32 %27, i32* %7, align 4
  br label %38

28:                                               ; preds = %6
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @vorbis_encode_setup_init(i32* %29)
  store i32 %30, i32* %14, align 4
  %31 = load i32, i32* %14, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %36

33:                                               ; preds = %28
  %34 = load i32*, i32** %8, align 8
  %35 = call i32 @vorbis_info_clear(i32* %34)
  br label %36

36:                                               ; preds = %33, %28
  %37 = load i32, i32* %14, align 4
  store i32 %37, i32* %7, align 4
  br label %38

38:                                               ; preds = %36, %24
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local i32 @vorbis_encode_setup_managed(i32*, i64, i64, i64, i64, i64) #1

declare dso_local i32 @vorbis_info_clear(i32*) #1

declare dso_local i32 @vorbis_encode_setup_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
